--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0.96"
 tokio = { version = "1.28.1", features = ["time", "process", "io-util", "net", "macros", "parking_lot"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+wildflower = "0.3.0"
 
 [patch.crates-io]
 relm4 = { git = 'https://github.com/Relm4/Relm4.git' }
