--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.1.0"
 [dependencies]
 anyhow = "1.0.71"
 chrono = "0.4.24"
+clap = { version = "4.3.0", features = ["derive"] }
 gtk4-layer-shell = "0.0.3"
 libpulse-binding = "2.27.1"
 relm4 = { version = "0.6.0-beta.1", features = [ "macros" ] }
@@ -18,6 +19,7 @@ relm4-components = "0.6.0-beta.1"
 rsass = "0.27.0"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
+serde_yaml = "0.9.21"
 tokio = { version = "1.28.1", features = ["time", "process", "io-util", "net", "macros", "parking_lot"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
