--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "4.3.0", features = ["derive"] }
 gtk4-layer-shell = "0.0.3"
 humantime-serde = "1.1.1"
 libpulse-binding = "2.27.1"
+paste = "1.0.12"
 rand = { version = "0.8.5", features = ["small_rng"] }
 relm4 = { version = "0.6.0-beta.1", features = [ "macros" ] }
 relm4-components = "0.6.0-beta.1"
